@@ -43,6 +43,10 @@ INSP.NAME.section.duplicated.args=Duplicated argument
 INSP.NAME.section.duplicated.args.message=This argument has been already added to ''{0}'' section.
 INSP.INTN.remove.duplicated.arg=Remove duplicated argument
 
+# SmkSectionUnexpectedKeywordArgsInspection
+INSP.NAME.section.unexpected.keyword.args=Unexpected keyword argument
+INSP.NAME.section.unexpected.keyword.args.message=Section ''{0}'' does not support keyword arguments.
+
 # SmkSubworkflowRedeclarationInspection
 INSP.NAME.subworkflow.redeclaration=Only last subworkflow with the same name will be executed
 
